day 3 - Form Material UI

--- a/day_3_MaterialUIForm/style.css
+++ b/day_3_MaterialUIForm/style.css
@@ -144,7 +144,7 @@ body {
     width: 100%;
 }
 
-/* Ripple effect */
+/* Ripple effect for button */
 .ripple {
     position: relative;
     overflow: hidden;
